add primary gradient test

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href='styles.css'>
 </head>
 <body>
-
+<div class='primary-linear'>
   Our Pricing
   Annually
   Monthly
@@ -43,6 +44,7 @@
   10 Users Allowed
   Send up to 20 GB
   Learn More
+</div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
