--- a/index.html
+++ b/index.html
@@ -14,36 +14,52 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
   <link rel="stylesheet" href='styles.css'>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
 </head>
 <body>
-<div class='primary-linear'>
-  Our Pricing
-  Annually
-  Monthly
+<!-- Primary linear class will need to be applied on focus -->
+<section id="pricing">Our Pricing
+  <br />
+  <span class="pricing-options">Annually</span>
+  <label class="switch">
+    <input type="checkbox" checked>
+    <!-- need to add an onclick here -->
+    <span class="slider round primary-linear"></span>
+  </label>
+  <span class="pricing-options">Monthly</span>
+</section>
 
+  <br />
+  <div class="container">
+  <div class="grid-item">
   Basic
-  &dollar;19.99
-  &dollar;199.99
+  <div class="pricing-main pricing-monthly">&dollar;19.99</div>
+  <div class="pricing-yearly">&dollar;199.99</div>
   500 GB Storage
   2 Users Allowed
   Send up to 3 GB
   Learn More
-
+</div>
+<div class="grid-item primary-linear">
   Professional
-  &dollar;24.99
-  &dollar;249.99
+  <div class="pricing-main pricing-monthly">&dollar;24.99</div>
+  <div class="pricing-yearly">&dollar;249.99</div>
   1 TB Storage
   5 Users Allowed
   Send up to 10 GB
   Learn More
-
+</div>
+<div class="grid-item">
   Master
-  &dollar;39.99
-  &dollar;399.99
+  <div class="pricing-main pricing-monthly">&dollar;39.99</div>
+  <div class="pricing-yearly">&dollar;399.99</div>
   2 TB Storage
   10 Users Allowed
   Send up to 20 GB
   Learn More
+
+</div>
 </div>
   
   <div class="attribution">
