--- a/index.html
+++ b/index.html
@@ -5,46 +5,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  
   <title>Frontend Mentor | [Challenge Name Here]</title>
-
+  
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution {
       font-size: 11px;
       text-align: center;
     }
-
+    
     .attribution a {
       color: hsl(228, 45%, 44%);
     }
-  </style>
+    </style>
   <link rel="stylesheet" href='styles.css'>
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-
+  
 </head>
 
 <body>
   <!-- Primary linear class will need to be applied on focus -->
   <section id="pricing">
     <h3>Our Pricing</h3>
-   <span class="pricing-options">Annually</span>
+    <span class="pricing-options">Annually</span>
     <label class="switch">
       <input type="checkbox" checked>
       <!-- need to add an onclick here -->
-      <span class="slider round primary-linear"></span>
+      <span class="slider round primary-linear" id="slider"></span>
     </label>
     <span class="pricing-options">Monthly</span>
   </section>
-
+  
   <br />
   <div class="container">
     <div class="grid-item main">
       <div class="tier">Basic</div>
       <div class="pricing-main pricing-monthly">&dollar;19.99</div>
-      <div class="pricing-off pricing-yearly">&dollar;199.99</div>
+      <div class="pricing-off pricing-main pricing-yearly">&dollar;199.99</div>
       <hr />
       <span>500 GB Storage</span>
       <hr />
@@ -57,7 +56,7 @@
     <div class="grid-item accent-grid">
       <div class="tier">Professional</div>
       <div class="pricing-main pricing-monthly">&dollar;24.99</div>
-      <div class="pricing-off pricing-yearly">&dollar;249.99</div>
+      <div class="pricing-off pricing-main pricing-yearly">&dollar;249.99</div>
       <hr />
       <span>1 TB Storage</span>
       <hr />
@@ -81,11 +80,12 @@
       <button class="learn-more">Learn More</button>
     </div>
   </div>
-
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
