fixed last grid item

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="grid-item main">
       <div class="tier">Master</div>
       <div class="pricing-main pricing-monthly">&dollar;39.99</div>
-      <div class="pricing-off pricing-yearly">&dollar;399.99</div>
+      <div class="pricing-off pricing-main pricing-yearly">&dollar;399.99</div>
       <hr />
       <span>2 TB Storage</span>
       <hr />
